--- a/digital_agency/index.html
+++ b/digital_agency/index.html
@@ -9,36 +9,76 @@
 
     <title>Starter Template for Bootstrap</title>
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <!-- Custom styles for this template -->
+
     <link href="css/main.css" rel="stylesheet">
   </head>
 
-  <body>
+  <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-custom navbar-fixed-top">
       <div class="container">
-        <div class="navbar-header">
+        <div class="navbar-header page-scroll">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">Digital Agency</a>
         </div>
-        <div id="navbar" class="collapse navbar-collapse">
+        <div id="navbar" class="collapse navbar-collapse navbar-right navbar-main-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li class="hidden">
+              <a href="#page-top"></a>
+            </li>
+            <li class="page-scroll">
+              <a href="#why">Why us?</a>
+            </li>
+            <li class="page-scroll">
+              <a href="#who">Who Are We?</a>
+            </li>
+                        <li class="page-scroll">
+              <a href="#clients">Clients</a>
+            </li>
+            <li class="page-scroll">
+              <a href="#contact">Contact</a>
+            </li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
-    <section>
-      
+    <section class="intro">
+      <div class="intro-body">
+        <div class="container">
+            <div class="row">
+              <div class="col-md-8 col-md-offset-2">
+                  <h1 class="brand-heading">Welcome</h1>
+                  <p class="intro-text"><strong>Digital Agency</strong> is here for all your technology, advertising, SEO and marketing needs.</p>
+              </div>
+            </div>
+        </div>
+      </div>
+    </section>
+    <section id="why" class="container context-section">
+      <h2 class="text-center">Why Choose Us?</h2>
+      <p class="text-center">Here are just a few reasons to choose <strong>Digital Agency</strong> for all of your digital marketing needs</p>
+      <br>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="block block-icon-left">
+            <div class="icon"><i class="fa fa-briefcase fa-5x"></i></div>
+          </div>
+          <div class="icon-content">
+            <h3>Professional</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat.</p>
+          </div>
+        </div>
+      </div>
+
     </section>
 
 
