--- a/digital_agency/index.html
+++ b/digital_agency/index.html
@@ -1,4 +1,4 @@
-
+  
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i|Montserrat:400,700" rel="stylesheet">
     <title>Starter Template for Bootstrap</title>
     <!-- Bootstrap core CSS -->
 
@@ -77,10 +77,108 @@
             consequat.</p>
           </div>
         </div>
+        <div class="col-md-4">
+          <div class="block block-icon-left">
+            <div class="icon"><i class="fa fa-money fa-5x"></i></div>
+          </div>
+          <div class="icon-content">
+            <h3>Low Cost</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat.</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="block block-icon-left">
+            <div class="icon"><i class="fa fa-dashboard fa-5x"></i></div>
+          </div>
+          <div class="icon-content">
+            <h3>Fast</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat.</p>
+          </div>
+        </div>
       </div>
-
+      <div class="row">
+        <div class="col-md-4">
+          <div class="block block-icon-left">
+            <div class="icon"><i class="fa fa-gear fa-5x"></i></div>
+          </div>
+          <div class="icon-content">
+            <h3>Resources & Tools</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat.</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="block block-icon-left">
+            <div class="icon"><i class="fa fa-users fa-5x"></i></div>
+          </div>
+          <div class="icon-content">
+            <h3>Large Community</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat.</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="block block-icon-left">
+            <div class="icon"><i class="fa fa-book fa-5x"></i></div>
+          </div>
+          <div class="icon-content">
+            <h3>Online Courses</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat.</p>
+          </div>
+        </div>
+      </div>
     </section>
 
+    <section id="who" class="content-section text-center">
+      <div class="who-section">
+        <div class="container">
+          <h2>Who are we?</h2>
+          <p class="lead"><strong>Digital Agency</strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua.</p>
+          <a href="#contact" title="" class="btn btn-default btn-lg">Contact Us Now</a>
+        </div>
+      </div>
+    </section>
+    <section id="clients" class="content-section text-center">
+      <div class="container">
+        <h2>Our Clients</h2>
+        <img src="img/partner1.png" alt="">
+        <img src="img/partner2.png" alt="">
+        <img src="img/partner3.png" alt="">
+        <img src="img/partner4.png" alt="">
+        <img src="img/partner5.png" alt="">
+        <img src="img/partner6.png" alt="">
+      </div>
+    </section>
+
+    <section id="contact" class="content-section text-center">
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+          <h2>Contact Digital Agency</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>contact@digitalagency.com</p>
+          <ul class="list-inline banner-social-butoons">
+            <li><a href="http://twitter.com/" title="" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i><span class="network-name">Twitter</span></a> </li>
+             <li><a href="http://facebook.com/" title="" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i><span class="network-name">Facebook</span></a> </li>
+              <li><a href="http://twitter.com/" title="" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i><span class="network-name"> Google+</span></a> </li>
+          </ul>
+        </div>
+      </div>
+    </section>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
