final updates with jquery easing functions related to scrolling

--- a/digital_agency/index.html
+++ b/digital_agency/index.html
@@ -60,7 +60,7 @@
         </div>
       </div>
     </section>
-    <section id="why" class="container context-section">
+    <section id="why" class="container content-section">
       <h2 class="text-center">Why Choose Us?</h2>
       <p class="text-center">Here are just a few reasons to choose <strong>Digital Agency</strong> for all of your digital marketing needs</p>
       <br>
@@ -72,9 +72,7 @@
           <div class="icon-content">
             <h3>Professional</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat.</p>
+            tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
         </div>
         <div class="col-md-4">
@@ -84,9 +82,7 @@
           <div class="icon-content">
             <h3>Low Cost</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat.</p>
+            tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
         </div>
         <div class="col-md-4">
@@ -96,9 +92,7 @@
           <div class="icon-content">
             <h3>Fast</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat.</p>
+            tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
         </div>
       </div>
@@ -110,9 +104,7 @@
           <div class="icon-content">
             <h3>Resources & Tools</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat.</p>
+            tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
         </div>
         <div class="col-md-4">
@@ -122,9 +114,7 @@
           <div class="icon-content">
             <h3>Large Community</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat.</p>
+            tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
         </div>
         <div class="col-md-4">
@@ -134,9 +124,7 @@
           <div class="icon-content">
             <h3>Online Courses</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat.</p>
+            tempor incididunt ut labore et dolore magna aliqua. </p>
           </div>
         </div>
       </div>
@@ -180,11 +168,17 @@
       </div>
     </section>
 
+    <footer>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    </footer>
+
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="js/bootstrap.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script src="js/main.js"></script>
     
   </body>
 </html>
