--- a/resume_page/index.html
+++ b/resume_page/index.html
@@ -8,6 +8,7 @@
     <title>Adrian Carmiol's Portfolio Resume</title>
     <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css"/>
   </head>
 
   <body>
@@ -35,10 +36,9 @@
             <h2># Contact Info</h2>
             <ul class="contact-list">
               <li><img src="img/phone.png" alt=""> (506) 8939-2134</li>
-              <li> <img src="img/email.png"> acarmiolu@ucenfotec.ac.cr</li>
-              <li> <img src="img/facebook.png"> Facebook<span>facebook.com/adriancarmiol</span></li>
-              <li> <img src="img/twitter.png"> Twitter<span>twitter.com/acarmiol</li>
-
+              <li> <img src="img/email.png"> acarmiol@icloud.com</li>
+              <li><a href="https://github.com/acarmiol"><i class="fa fa-github-alt fa-2x" aria-hidden="true"></i></a> Github <span>github.com/acarmiol</span>  </li>
+              <li><a href="https://facebook.com/adriancarmiol"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a> Facebook<span>facebook.com/adriancarmiol </span></li>
             </ul>
           </div>
         </div>
@@ -51,31 +51,9 @@
                 1999-2005
               </div>
               <div class="media-body">
-                <h4 class="media-heading">Miami Dade College</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor .</p>
-              </div>
-            </div>
-
-            <div class="media">
-              <div class="media-left">
-                1999-2005
-              </div>
-              <div class="media-body">
-                <h4 class="media-heading">University of Costa Rica</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor .</p>
-              </div>
-            </div>
-
-            <div class="media">
-              <div class="media-left">
-                1999-2005
-              </div>
-              <div class="media-body">
                 <h4 class="media-heading">Cenfotec University</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor .</p>
+                  tempor .</p>
               </div>
             </div>
 
@@ -86,10 +64,34 @@
               <div class="media-body">
                 <h4 class="media-heading">Udemy & Treehouse (Online)</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                  tempor .</p>
+              </div>
+
+
+            <div class="media">
+              <div class="media-left">
+                1999-2005
+              </div>
+              <div class="media-body">
+                <h4 class="media-heading">Miami Dade College</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                 tempor .</p>
               </div>
             </div>
+          </div>
 
+          <div class="media">
+            <div class="media-left">
+              1999-2005
+            </div>
+            <div class="media-body">
+              <h4 class="media-heading">University of Costa Rica</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor .</p>
+
+            </div>
+
+          </div>
           </div>
           <div class="col-md-5">
             <h2># Programming Skills</h2>
