--- a/adm_page/index.html
+++ b/adm_page/index.html
@@ -49,7 +49,7 @@
     <div class="row">
       <div class="col-md-4">
         <div class="list-group">
-          <a href="#" class="list-group-item active"> <i class="glyphicon glyphicon-dashboard"></i> Dashboard</a>
+          <a href="" class="list-group-item active"> <i class="glyphicon glyphicon-dashboard"></i> Dashboard</a>
           <a href="#" class="list-group-item"><i class="glyphicon glyphicon-file"></i> Pages</a>
           <a href="#" class="list-group-item"><i class="glyphicon glyphicon-folder-open"></i> Categories</a>
           <a href="#" class="list-group-item"><i class="glyphicon glyphicon-user"></i> User Accounts </a>
@@ -141,6 +141,7 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
 <script src="js/bootstrap.js"></script>
 </body>
 </html>
