--- a/adm_page/users.html
+++ b/adm_page/users.html
@@ -29,8 +29,8 @@
       <li><a href="categories.html">Categories</a></li>
       <li class="active"><a href="users.html" >Users</a></li>
     </ul>
-    <form class="navbar-form navbar-left">
-      <input type="text" class="form-control col-lg-8" placeholder="Search">
+    <form class="navbar-form navbar-left ">
+      <input type="text" class="form-control col-lg-8 search-form" placeholder="Search">
     </form>
     <ul class="nav navbar-nav navbar-right">
       <li class="dropdown">
@@ -49,22 +49,41 @@
     <div class="row">
       <div class="col-md-4">
         <div class="list-group">
-          <a href="#" class="list-group-item"> <i class="glyphicon glyphicon-dashboard"></i> Dashboard</a>
-          <a href="#" class="list-group-item"><i class="glyphicon glyphicon-file"></i> Pages</a>
-          <a href="#" class="list-group-item"><i class="glyphicon glyphicon-folder-open"></i> Categories</a>
-          <a href="#" class="list-group-item active"><i class="glyphicon glyphicon-user"></i> User Accounts </a>
+          <a href="index.html" class="list-group-item"> <i class="glyphicon glyphicon-dashboard"></i> Dashboard</a>
+          <a href="pages.html" class="list-group-item"><i class="glyphicon glyphicon-file"></i> Pages</a>
+          <a href="categories.html" class="list-group-item"><i class="glyphicon glyphicon-folder-open"></i> Categories</a>
+          <a href="users.html" class="list-group-item active"><i class="glyphicon glyphicon-user"></i> User Accounts </a>
         </div>
       </div>
       <div class="col-md-8">
-        <h1 class="page-header"><i class="glyphicon glyphicon-user"></i> User Accounts</h1>
-       
-        <table class="table table-striped">
+        <div class="row">
+          <div class="col-md-6">
+            <h1 class="page-header"><i class="glyphicon glyphicon-user"></i> Users</h1>
+          </div>
+          <div class="col-md-6">
+            <div class="btn-group actions" role="group" aria-label="...">
+              <a href="#" class="btn btn-default"><i class="glyphicon glyphicon-plus"></i>New</a>
+              <a href="#"class="btn btn-default"><i class="glyphicon glyphicon-pencil"></i>Edit</a>
+              <a href="#"class="btn btn-default"><i class="glyphicon glyphicon-remove"></i>Delete</a>
+            </div>
+          </div>
+        </div>
+
+       <ol class="breadcrumb">
+         <li><a href="index.html">Dashboard</a></li>
+         <li class="active">Users</li>
+       </ol>
+
+        <table id="sort-table" class="table table-striped tablesorter">
+          <thead>
           <tr>
             <th><input type="checkbox"></th>
-            <th>Full Name</th>
-            <th>Email</th>
-            <th>Group</th>
+            <th>Full Name<i class="glyphicon glyphicon-chevron-down"></i></th>
+            <th>Email<i class="glyphicon glyphicon-chevron-down"></i></th>
+            <th>Group<i class="glyphicon glyphicon-chevron-down"></i></th>
           </tr>
+          </thead>
+          <tbody>
           <tr>
             <td><input type="checkbox" name=""></td>
             <td><a href="page.html" title="">John Doe</a></td>
@@ -83,13 +102,32 @@
             <td>jsmith@gmail.com</td>
             <td>Registered</td>
           </tr>
+          </tbody>
         </table>
-        
+
+        <nav aria-label="Page navigation">
+          <ul class="pagination">
+            <li>
+              <a href="#" aria-label="Previous">
+                <span aria-hidden="true">&laquo;</span>
+              </a>
+            </li>
+            <li><a href="#">1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">4</a></li>
+            <li><a href="#">5</a></li>
+            <li>
+              <a href="#" aria-label="Next">
+                <span aria-hidden="true">&raquo;</span>
+              </a>
+            </li>
+          </ul>
+        </nav>
 
       </div>
     </div>
   </div>
-
 </section>
 
 <footer>
@@ -101,6 +139,24 @@
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="js/bootstrap.js"></script>
+<script src="js/jquery.tablesorter.js"></script>
+<script>
+  $(function(){
+    $('#sort-table').tablesorter({
+      sortList:[[0,0],[1,0]]
+    });
+  });
+</script>
+<script>
+  var $rows = $('table tr');
+  $('.search-form').keyup(function() {
+    var val = $.trim($(this).val()).replace(/ +/g,'').toLowerCase();
+    $rows.show().filter(function(){
+      var text = $(this).text().replace(/\s+/g, '').toLowerCase();
+      return !~text.indexOf(val);
+    }).hide()
+  })
+</script>
 </body>
 </html>
 
