adding form and finishing project

--- a/adm_page/users.html
+++ b/adm_page/users.html
@@ -86,19 +86,19 @@
           <tbody>
           <tr>
             <td><input type="checkbox" name=""></td>
-            <td><a href="page.html" title="">John Doe</a></td>
+            <td><a href="user.html" title="">John Doe</a></td>
             <td>jdoe@gmail.com</td>
             <td>Admin</td>
           </tr> 
           <tr>
             <td><input type="checkbox" name=""></td>
-            <td><a href="page.html" title="">Brad Traversy</a></td>
+            <td><a href="user.html" title="">Brad Traversy</a></td>
             <td>techguyinfo@gmail.com</td>
             <td>Admin</td>
           </tr>
           <tr>
             <td><input type="checkbox" name=""></td>
-            <td><a href="page.html" title="">James Smith</a></td>
+            <td><a href="user.html" title="">James Smith</a></td>
             <td>jsmith@gmail.com</td>
             <td>Registered</td>
           </tr>
