--- a/domain_site/index.html
+++ b/domain_site/index.html
@@ -44,7 +44,7 @@
     </nav>
 
     <section>
-      <div id="myCarousel " class="carousel slide" data-ride="carousel">
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
           <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -60,9 +60,6 @@
             <div class="carousel-caption">
               <div class="row">
                 <div class="col-md-7">
-                  
-                </div>
-                <div class="col-md-5">
                   <h1>Affordable Web Hosting</h1>
                   <ul class="feature-list">
                     <li><i class="fa fa-check"></i>Unlimited Disk Spac</li>
@@ -72,7 +69,10 @@
                     <li ><i class="fa fa-check"></i>Free Search Engine & Marketing Credits</li>
                     <li ><i class="fa fa-check"></i>GREEN! Powered by 100% wind energy</li>
                   </ul>
-                  <p><<a href="" title="" class="btn btn-primary">Sign Up Today</a></p>
+                  <p><a href="" title="" class="btn btn-primary">Sign Up Today</a></p>
+                </div>
+                <div class="col-md-5">
+                  <img src="img/servers1.png" alt="" class="server-img">
                 </div>
               </div>
             </div>
@@ -82,16 +82,38 @@
             <img src="img/bg2.jpg" alt="...">
             <div class="container">
             <div class="carousel-caption">
-              ...
+              <div class="row">
+                <div class="col-md-7">
+                  <h1>Affordable Web Hosting</h1>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat.</p>
+                  <p><a href="" title="" class="btn btn-primary">Sign Up Today</a></p>
+                </div>
+                <div class="col-md-5">
+                  <img src="img/servers2.png" alt="" class="server-img">
+                </div>
+              </div>
             </div>
             </div>
           </div>
           <div class="item">
             <img src="img/bg3.jpg" alt="...">
             <div class="container">
-            <div class="carousel-caption">
-              ...
-            </div>
+           <div class="carousel-caption">
+             <div class="row">
+               <div class="col-md-7">
+                 <h1>99.9% Uptime</h1>
+                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus rem architecto, quis, aliquid a non asperiores cumque fugiat tempore dolor, quas animi reiciendis quibusdam recusandae sunt eos, error blanditiis deserunt.
+                 <p><a href="" title="" class="btn btn-primary">Sign Up Today</a></p>
+               </div>
+               <div class="col-md-5">
+                 <img src="img/servers3.png" alt="" class="server-img">
+
+               </div>
+             </div>
+           </div>
             </div>
           </div>
           
