--- a/digital_agency/index.html
+++ b/digital_agency/index.html
@@ -24,7 +24,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Digital Agency</a>
+          <a class="navbar-brand" href="#">GRETROG S.A.</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse navbar-right navbar-main-collapse">
           <ul class="nav navbar-nav">
@@ -32,10 +32,10 @@
               <a href="#page-top"></a>
             </li>
             <li class="page-scroll">
-              <a href="#why">Why us?</a>
+              <a href="#why">Por que nosotros?</a>
             </li>
             <li class="page-scroll">
-              <a href="#who">Who Are We?</a>
+              <a href="#who">Quienes Somos?</a>
             </li>
                         <li class="page-scroll">
               <a href="#clients">Clients</a>
